--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -58,7 +58,7 @@
         @case ('sales') { <app-sales /> }
         @case ('projects') { <app-projects /> }
         @case ('students') { <app-students /> }
-        @case ('reports') { <div class="h-96 grid place-items-center text-white/70">[Reportes y analítica]</div> }
+        @case ('reports') { <app-reports /> }
         @case ('settings') { <app-settings /> }
         @case ('appearance') {
           <app-appearance></app-appearance>
