--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -48,10 +48,10 @@
 
 <!-- Modal para Crear/Editar Categoría -->
 <!-- Backdrop -->
-<div (click)="closeModal()" [class.hidden]="!isModalOpen()" class="fixed inset-0 z-40 bg-gray-900/50 backdrop-blur-sm"></div>
+<div (click)="closeModal()" [class.hidden]="!isModalOpen()"  class="fixed inset-0 z-40 bg-gray-900/50 backdrop-blur-sm"></div>
 
 <!-- Modal -->
-<div id="category-modal" tabindex="-1" aria-hidden="true" [class.hidden]="!isModalOpen()" class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-modal md:h-full flex">
+<div id="category-modal" tabindex="-1" aria-hidden="true" [class.hidden]="!isModalOpen()" class="fixed top-0 right-0 left-0 z-50 justify-center items-start w-full md:inset-0 h-modal md:h-full flex pt-8">
   <div class="relative p-4 w-full max-w-md h-full md:h-auto">
     <div class="relative rounded-lg shadow bg-slate-800 border border-white/10">
       <button (click)="closeModal()" type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent rounded-lg text-sm p-1.5 ml-auto inline-flex items-center hover:bg-gray-600 hover:text-white">
